--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
   
 deploy:
   provider: heroku
+  skip_cleanup: true
   api_key:
     secure: "7c8e9d44-1555-4db1-82f6-16352a824c66"
   app: spar-boot-angulardemo
