--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,32 @@ sudo: required
 services: 
   - docker
 
+language: node_js
+
+node_js: 
+  - "11.7.0"
+
 jdk:
   - oraclejdk8
 
+before_install:
+  - java -version
+  - cd ./src/main/angularUI/
+
+install:
+  - npm install
+  - npm install -g @angular/cli
+
+before_script:
+  - cd ../../..
+
 script:
-    - docker build -t mshuphiyan/spring-boot-web-angular .
+  - mvn clean verify
   
 deploy:
   provider: heroku
   skip_cleanup: true
+  strategy: git
   api_key:
     secure: "7c8e9d44-1555-4db1-82f6-16352a824c66"
-  app: spar-boot-angulardemo
+  app: mshuphiyan/spring-boot-web-angular
