--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,10 @@
 						<id>exec-npm-ng-build</id>
 						<phase>generate-sources</phase>
 						<configuration>
-							<executable>ng</executable>
+							<executable>npm</executable>
 							<arguments>
+								<argument>run</argument>
+								<argument>ng</argument>
 								<argument>build</argument>
 							</arguments>
 						</configuration>
